gcc/testsuite/rust/rustc/ui/parser/break-in-unlabeled-block_dg.rs
//@ run-rustfix
fn main() {
    {
        break (); // { dg-error ".E0268." "" { target *-*-* } }
    }
    {
        {
            break (); // { dg-error ".E0268." "" { target *-*-* } }
        }
    }
}

